# custom-playwright-python

./: README.md  meta.yaml  pyproject.toml  setup.py
.github/workflows/: ci.yml
custom_playwright/: __main__.py
custom_playwright/_impl/: _accessibility.py  _artifact.py  _assertions.py  _async_base.py  _browser.py  _browser_context.py  _browser_type.py  _cdp_session.py  _connection.py  _console_message.py  _dialog.py  _download.py  _driver.py  _element_handle.py  _fetch.py  _file_chooser.py  _frame.py  _har_router.py  _helper.py  _impl_to_api_mapping.py  _input.py  _js_handle.py  _json_pipe.py  _local_utils.py  _locator.py  _network.py  _object_factory.py  _page.py  _playwright.py  _selectors.py  _set_input_files_helpers.py  _stream.py  _sync_base.py  _tracing.py  _transport.py  _video.py  _waiter.py  _web_error.py  _writable_stream.py
custom_playwright/async_api/: __init__.py  _context_manager.py  _generated.py
custom_playwright/sync_api/: __init__.py  _context_manager.py  _generated.py
playwright/_impl/: _async_base.py  _browser_context.py  _connection.py
playwright/async_api/: _generated.py
playwright/sync_api/: _generated.py
scripts/: documentation_provider.py  generate_api.py  generate_async_api.py  generate_sync_api.py  update_api.sh  update_versions.py
tests/: conftest.py  server.py  test_reference_count_async.py
tests/assets/: client.py
tests/async/: conftest.py  test_accessibility.py  test_add_init_script.py  test_assertions.py  test_asyncio.py  test_browser.py  test_browsercontext.py  test_browsercontext_add_cookies.py  test_browsercontext_clearcookies.py  test_cdp_session.py  (+75 more)
(+59 files in other folders)
