[build-system]
requires = ["setuptools==68.2.2", "setuptools-scm==8.0.4", "wheel==0.42.0", "auditwheel==5.4.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "custom_playwright/_repo_version.py"

[tool.pytest.ini_options]
addopts = "-Wall -rsx -vv -s"
markers = [
    "skip_browser",
    "only_browser",
    "skip_platform",
    "only_platform"
]
junit_family = "xunit2"
asyncio_mode = "auto"

[tool.mypy]
ignore_missing_imports = true
python_version = "3.8"
warn_unused_ignores = false
warn_redundant_casts = true
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = false
exclude = [
    "build/",
    "env/",
]

[tool.isort]
profile = "black"

[tool.pyright]
include = ["custom_playwright", "tests", "scripts"]
pythonVersion = "3.8"
reportMissingImports = false
reportTypedDictNotRequiredAccess = false
reportCallInDefaultInitializer = true
reportOptionalSubscript = false
reportUnboundVariable = false
strictParameterNoneValue = false

[tool.poetry]
name = "custom-playwright"
version = "0.1.0"
description = "A custom fork of Playwright with recording extensions"
authors = ["Your Name <you@example.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/haydenw2005/custom-playwright-python"
repository = "https://github.com/haydenw2005/custom-playwright-python"

[tool.poetry.scripts]
custom-playwright = "custom_playwright.__main__:main"
